# hdnum

./: .clang-tidy  .gitignore  LANCZOSv0.cc  LANCZOSv1.cc  LANCZOSv2.cc  LANCZOSv2a.cc  README.md  hdnum.hh  make.def
benchmark/: README.md
examples/: lanczos-example.cc
examples/lanczos/: CMakeLists.txt  householder-test.cc  lanczos-example.cc  matrix_viewer.cpp
examples/num0/: Makefile  corona.cc  integralgleichung.cc  plot.gp  qr_gram_schmidt.cc  wurzelbanach.cc
examples/num1/: BeispielDGL.hh  IE.cc  Makefile  Matrixinvertierungstest.cc  beispielDGL.cc  hodgkinhuxley.cc  model_ordertest.cc  model_ordertest_klasse.cc  modelproblem.cc  modelproblem.hh  modelproblem_high_dim.cc  modelproblem_runge_kutta.cc  modelproblemkutta  modelproblemkutta.cc  testode.cc  vanderpol.cc
examples/other/: laplace_matrix.hh  print-laplace.cpp
examples/progkurs/: Makefile  ausgabe.cc  classes.cc  gaussseidel.cc  gs.cc  matrizen.cc  operationen.cc  vektoren.cc
examples/qr_eigenvaules/: big_matrices01.cpp  compare_time.cpp  small_matrices01.cpp
mystuff/: Makefile  example.cc  newton_methods.cc  newton_methods_test_against.py  test_convergence.py  test_projected_newton.py
mystuff/newtonVariants/: newtonMethods.cc  newtonVisualization.hh  nonlinearFunctions.hh  nonlinearProblems.hh  showLossAndReduction.py  testConvergence.py  testNewtonAgainstDogLeg.py  testProjectedNewton.py
programmierkurs/: programmierkurs.tex  programmierkurs_neu.tex
src/: cdenseMatrix.hh  cvector.hh  densematrix.hh  lanczos.hh  lanczos_basic.hh  lanczos_cro.hh  lanczos_householder.hh  lanczos_optimized.hh  lanczos_sro.hh  lanczos_util.hh  lr.hh  newton.hh  ode.hh  qr.hh  qr_eigenvalues.hh  qrhousholder.hh  rungekutta.hh  rungekutta_n.hh  rungekutta_n_klasse.hh  sparsematrix.hh  testode.hh  vector.hh
test/: CMakeLists.txt  builder_sparse_matrix_tests.cc  construction_sparse_matrix.cc  default_sparse_matrix.cc  densematrix_sparse_matrix.cc  example_matrix_market.mtx  non_empty_sparse_matrix.cc  operators_sparse_matrix.cc  read_matrix_from_file.cc  special_matricies_sparse_matrix.cc  test_qr_decomposition.cc  test_qr_gram_schmidt.cc  test_qr_gram_schmidt_pivoting.cc  test_qr_gram_schmidt_sparse.cc  test_qrhousholder.cc
tutorial/: Makefile  einleitung.tex  hdnum-tutorial-article.tex  hdnum-tutorial-beamer.tex  hdnum-tutorial-main.tex  hdnum.tex  ode.tex  programmierkurs.tex
